--- a/style/blog.css
+++ b/style/blog.css
@@ -1,17 +1,42 @@
 body{
     font-family: 'Work Sans', sans-serif;
 }
-.banner-title{ 
-;
+
+.banner-item{  
+font-size: 60px;
+font-weight: 700;
+width: 525px;
+margin-bottom: 24px;
+color: #FFF;
 }
 .banner-description{
-    
-
+font-size: 16px;
+ color: #FFFFFF;
+ width: 494px;
+}
+.banner-content{
+    max-width: 500px;
 }
 
-.btn-praimary{
-
-}
 .banner{
+    text-align: right;
+    padding: 70px 230px 300px 700px;
     display: flex;
+}
+.btn-praimary{
+    color: #005FAC;
+text-align: right;
+font-size: 20px;
+font-weight: 600;
+padding: 20px 25px;
+border-radius: 5px;
+background: #FFF;
+border: 0;
+margin-top: 30px;
+}
+.header{
+    background-image: url('../images/banner/banner3.png');
+ background-repeat:no-repeat;
+    width: 1270px;
+     height: 800px;
 }
